@@ -1,5 +1,11 @@
+2017-05-31  Kubo Takehiro <kubo@jiubao.org>
+	* docs/hanging-after-inactivity.md:
+	    Add a document about tcp_keepalive and tcp_keepalive_time properties.
+	* README.md, docs/timeout-parameters.md, lib/oci8/properties.rb:
+	    Add links to the TCP keepalive document.
+
 2017-05-21  Kubo Takehiro <kubo@jiubao.org>
-	*  docs/install-instant-client.md: Add a link to the Visual
+	* docs/install-instant-client.md: Add a link to the Visual
 	    C++ 2013 redistributable package required to use Oracle 12.2.
 
 2017-05-08  Kubo Takehiro <kubo@jiubao.org>
